--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Forum&family=Gotu&family=Montserrat&family=Montserrat+Alternates&family=Rubik:wght@400;500;700&family=Syne&display=swap" rel="stylesheet">
+
+    
     <title>Alexis That Fox</title>
   </head>
   <body>
