relocated nav items from nav to data

--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Forum&family=Gotu&family=Montserrat&family=Montserrat+Alternates&family=Rubik:wght@400;500;700&family=Syne&display=swap" rel="stylesheet">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Assistant:wght@200..800&family=Tenor+Sans&display=swap" rel="stylesheet">
     
     <title>Alexis That Fox</title>
   </head>
